added back links and create new blog post

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,6 +4,8 @@
 </p>
  
 <p>
-  <strong>Text:</strong>
-  <%= @post.text %>
+  <strong>Content:</strong>
+  <%= @post.content %>
 </p>
+
+<%= link_to 'Back', posts_path %>
