--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Blog#index</h1>
-<p>Find me in app/views/blog/index.html.erb</p>
+<h1>Coding Blog!</h1>
+<%= link_to 'My Posts', controller: 'posts' %>
