--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,6 +2,20 @@
 
 <%= form_with scope: :post, url: posts_path, local: true do |form| %>  
 
+  <% if @post.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@post.errors.count, "error") %> prohibited
+        this post from being saved:
+      </h2>
+      <ul>
+        <% @post.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <p>
     <%= form.label :title %><br>
     <%= form.text_field :title %>
