--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,37 +1,5 @@
 <h1>Create new post</h1>
 
-<%= form_with scope: :post, url: posts_path, local: true do |form| %>  
-
-  <% if @post.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@post.errors.count, "error") %> prohibited
-        this post from being saved:
-      </h2>
-      <ul>
-        <% @post.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <p>
-    <%= form.label :title %><br>
-    <%= form.text_field :title %>
-  </p>
- 
-  <p>
-    <%= form.label :content %><br>
-    <%= form.text_area :content %>
-  </p>
- 
-<%# input image %>
-
-
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
+<%= render 'form' %>
 
 <%= link_to 'Back', posts_path %>
