--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,4 +8,8 @@
   <%= @post.content %>
 </p>
 
+<%= link_to 'Edit', edit_post_path(@post) %>
+<%= link_to 'Destroy', post_path(@post),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %>
 <%= link_to 'Back', posts_path %>
