--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,6 +8,12 @@
   <%= @post.content %>
 </p>
 
+<h2>Comments</h2>
+<%= render @post.comments %>
+
+<h2>Add a comment:</h2>
+<%= render 'comments/form' %>
+
 <%= link_to 'Edit', edit_post_path(@post) %>
 <%= link_to 'Destroy', post_path(@post),
               method: :delete,
