--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -1,2 +1,12 @@
 <h1>Coding Blog!</h1>
 <%= link_to 'My Posts', controller: 'posts' %>
+
+<% if user_signed_in? %>
+<span class='user-greeting'> <%= "Welcome, #{current_user.username}" %> </span>
+<%= link_to "Sign Out", destroy_user_session_path, method: "delete" %>
+<% else %>
+<%= link_to "Sign In", new_user_session_path %>
+<%= link_to "Sign Up", new_user_registration_path %>
+<% end %>
+
+
