--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,7 +15,12 @@
 <%= render 'comments/form' %>
 
 <%= link_to 'Edit', edit_post_path(@post) %>
-<%= link_to 'Destroy', post_path(@post),
-              method: :delete,
-              data: { confirm: 'Are you sure?' } %>
+
+<%# deletes post %>
+<% if user_signed_in? %>
+  <%= link_to 'Destroy', post_path(@post),
+                method: :delete,
+                data: { confirm: 'Are you sure?' } %>
+  <% end %>
+
 <%= link_to 'Back', posts_path %>
