only allow signed in users to create and edit posts

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Post listing</h1>
- 
-<%= link_to 'Create a new post', new_post_path %>
+
+<% if user_signed_in? %>
+  <%= link_to 'Create a new post', new_post_path %>
+<% end %>
 
 <table>
   <tr>
