--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,19 +8,18 @@
   <%= @post.content %>
 </p>
 
+
+<% if user_signed_in? %>
+  <%= link_to 'Edit Post', edit_post_path(@post) %>
+  <%= link_to 'Destroy Post', post_path(@post),
+                method: :delete,
+                data: { confirm: 'Are you sure?' } %>
+  <% end %>
+
 <h2>Comments</h2>
 <%= render @post.comments %>
 
 <h2>Add a comment:</h2>
 <%= render 'comments/form' %>
-
-<%= link_to 'Edit', edit_post_path(@post) %>
-
-<%# deletes post %>
-<% if user_signed_in? %>
-  <%= link_to 'Destroy', post_path(@post),
-                method: :delete,
-                data: { confirm: 'Are you sure?' } %>
-  <% end %>
 
 <%= link_to 'Back', posts_path %>
