--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,14 +7,14 @@
 <table>
   <tr>
     <th>Title</th>
-    <th>Content</th>
+    <th>Created by</th>
     <th></th>
   </tr>
  
   <% @posts.each do |post| %>
     <tr>
       <td><%= post.title %></td>
-      <td><%= post.content %></td>
+      <td><%= User.find(post.user_id).username %></td>
       <td><%= link_to 'Show', post_path(post) %></td>
     </tr>
   <% end %>
