--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,33 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+h1{
+    font-size:60px;
+    font-weight: bold;
+    font-family: fantasy;
+    color: red;
+    text-align: center;
+    text-decoration: underline;
+}
+
+h2{
+    font-size:60px;
+    font-weight: bold;
+    font-family: fantasy;
+    color: red;
+    text-align: center;
+}
+
+h3{
+    font-size:30px;
+    font-weight: bold;
+    font-family: fantasy;
+    color: black;
+    text-align: center;
+}
+
+th{
+    font-size: 30px;
+    font-family: fantasy;
+    color:black;
+}
