--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Coding Blog!</h1>
+<h1>Codex Blogs</h1>
+<h2> Welcome</h2>
+<h3>Click on My Posts to start blogging!</h3>
 <%= link_to 'My Posts', controller: 'posts' %>
