Image upload with aws done

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -23,7 +23,12 @@
     <%= form.label :content %><br>
     <%= form.text_area :content %>
   </p>
- 
+  
+  <p>
+    <%= form.label :picture %><br>
+    <%= form.file_field :picture, accept: 'image/png, image/jpg, image/jpeg' %>
+  </p>
+  
   <p>
     <%= form.submit %>
   </p>
