--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,11 @@
   <strong>Title:</strong>
   <%= @post.title %>
 </p>
- 
+
+<p>
+  <%= image_tag @post.picture, class: "image" if @post.picture.attached? %>
+</p>
+
 <p>
   <strong>Content:</strong>
   <%= @post.content %>
