changed authentication to navbar

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -9,10 +9,9 @@
 </p>
 
 <p>
-  <% if user_signed_in? %>
+  <% if current_user.id == @post.user_id %>
     <%= link_to 'Destroy Comment', [comment.post, comment],
                 method: :delete,
                 data: { confirm: 'Are you sure?' } %>
-  <% end %>
-              
+  <% end %>            
 </p>
