--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,13 +8,12 @@
   <%= @post.content %>
 </p>
 
-
-<% if user_signed_in? %>
+<% if current_user.id == @post.user_id %>
   <%= link_to 'Edit Post', edit_post_path(@post) %>
   <%= link_to 'Destroy Post', post_path(@post),
                 method: :delete,
                 data: { confirm: 'Are you sure?' } %>
-  <% end %>
+<% end %>
 
 <h2>Comments</h2>
 <%= render @post.comments %>
