--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -5,6 +5,6 @@ p{
     font-size:30px;
     font-weight: bold;
     font-family: fantasy;
-    color: red;
+    color: black;
     text-align: center;
 }
