add a bit of styling

--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -1,4 +1,3 @@
 <h1>Codex Blogs</h1>
-<h2> Welcome</h2>
-<h3>Click on My Posts to start blogging!</h3>
-<%= link_to 'My Posts', controller: 'posts' %>
+<h2> <%= link_to 'Welcome', controller: 'posts' %> </h2>
+<h3>Sign up to start blogging!</h3>
