--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav>
   <% if user_signed_in? %>
+    <span class='user-greeting'> <%= "Welcome, #{current_user.username}" %> </span><br>
     <%= link_to "Home", blog_index_path %>
-    <span class='user-greeting'> <%= "Welcome, #{current_user.username}" %> </span>
     <%= link_to "Sign Out", destroy_user_session_path, method: "delete" %>
   <% else %>
     <%= link_to "Home", blog_index_path %>
