added payment processing

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -7,7 +7,7 @@ h1{
     font-family: fantasy;
     color: red;
     text-align: center;
-    text-decoration: underline;
+    // text-decoration: underline;
 }
 
 h2{
@@ -32,6 +32,21 @@ th{
     color:black;
 }
 
+td {
+    font-size: 16px;
+    font-family: fantasy;
+    color: darkblue;
+}
+
 .image {
-    width: 800px;
+    width: 600px;
+    height: 450px;
+}
+
+.user-greeting, .navbar {
+    font-family: fantasy;
+}
+
+nav {
+    font-family: fantasy;
 }
