--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -1,3 +1,5 @@
-<h1>Codex Blogs</h1>
-<h2> <%= link_to 'Welcome', controller: 'posts' %> </h2>
-<h3>Sign up to start blogging!</h3>
+<h1>Welcome to Codex Blog</h1>
+
+<h2><%= link_to 'Check Out My Posts', controller: 'posts' %></h2>
+
+<h3>Sign up to leave comments!</h3>
