--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
-<h1>Post listing</h1>
+<h1>Post Listing</h1>
 
 <% if user_signed_in? %>
-  <%= link_to 'Create a new post', new_post_path %>
+  <span class="navbar"><%= link_to 'Create a new post', new_post_path %></span>
 <% end %>
 
 <table>
