fix show page bug

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -11,10 +11,13 @@
 </p>
 
 <p>
-
-  <% if current_user.id == @post.user_id %>
-    <%= link_to 'Destroy Comment', [comment.post, comment],
-                method: :delete,
-                data: { confirm: 'Are you sure?' } %>
-  <% end %>            
+  <% if current_user %>
+    <% if current_user.id == @post.user_id %>
+      <%= link_to 'Destroy Comment', [comment.post, comment],
+                  method: :delete,
+                  data: { confirm: 'Are you sure?' } %>
+    <% end %> 
+  <% end %>         
 </p>
+
+
