--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,12 +10,13 @@
   <strong>Content:</strong>
   <%= @post.content %>
 </p>
-
-<% if current_user.id == @post.user_id %>
-  <%= link_to 'Edit Post', edit_post_path(@post) %>
-  <%= link_to 'Destroy Post', post_path(@post),
-                method: :delete,
-                data: { confirm: 'Are you sure?' } %>
+<% if current_user %>
+  <% if current_user.id == @post.user_id %>
+    <%= link_to 'Edit Post', edit_post_path(@post) %>
+    <%= link_to 'Destroy Post', post_path(@post),
+                  method: :delete,
+                  data: { confirm: 'Are you sure?' } %>
+  <% end %>
 <% end %>
 
 <h2>Comments</h2>
@@ -25,3 +26,4 @@
 <%= render 'comments/form' %>
 
 <%= link_to 'Back', posts_path %>
+
