--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_with(model: [ @post, @post.comments.build ], local: true) do |form| %>
     <p>
       <%= form.label :name %><br>
-      <%= form.text_field :name %>
+      <%= form.text_field :commenter %>
     </p>
     <p>
       <%= form.label :comment %><br>
-      <%= form.text_area :comment %>
+      <%= form.text_area :body %>
     </p>
     <p>
       <%= form.submit %>
