--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -2,4 +2,4 @@
 
 <h2><%= link_to 'Check Out My Posts', controller: 'posts' %></h2>
 
-<h3>Sign up to leave comments!</h3>
+<h3>Sign up to start writing!</h3>
