--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -5,7 +5,6 @@ h1{
     font-size:60px;
     font-weight: bold;
     font-family: fantasy;
-    color: red;
     text-align: center;
     // text-decoration: underline;
 }
@@ -14,7 +13,6 @@ h2{
     font-size:60px;
     font-weight: bold;
     font-family: fantasy;
-    color: red;
     text-align: center;
 }
 
@@ -49,4 +47,27 @@ td {
 
 nav {
     font-family: fantasy;
+}
+
+.center-table {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.add-margin > td {
+    padding-right: 50px;
+}
+
+.navbar {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.field {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.left {
+    text-align: left;
 }
